@@ -1,3 +1,13 @@
+2001-01-05  Michael Yount <csf@moscow.com>
+
+	* lib/Majordomo.pm:  (announce) Add support for sending
+	announcements to auxiliary lists.
+	(_who) Add "owners" command mode, which displays the list
+	owner addresses and the lists they administrate.  The
+	GLOBAL:owners auxiliary list is automatically updated by this 
+	command to contain all of the owners' addresses, including
+	the deletion of addresses that are no longer owners.
+
 2000-12-20  Michael Yount <csf@moscow.com>
 
 	* lib/Mj/Format.pm:  (archive) Use format files for the archive
